--- a/teamproject/src/main/resources/config/jdbc.properties
+++ b/teamproject/src/main/resources/config/jdbc.properties
@@ -2,7 +2,7 @@
 
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:xe
-jdbc.username=pola
-jdbc.password=pola
+jdbc.username=pola1
+jdbc.password=pola1
 jdbc.maxActive=10
 jdbc.initialSize=5
