--- a/teamproject/src/main/resources/config/jdbc.properties
+++ b/teamproject/src/main/resources/config/jdbc.properties
@@ -1,8 +1,8 @@
 ## FileName : jdbc.properties
 
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:xe
-jdbc.username=pola1
-jdbc.password=pola1
+jdbc.url=jdbc:oracle:thin:@192.168.0.83:1521:xe
+jdbc.username=pola
+jdbc.password=pola
 jdbc.maxActive=10
 jdbc.initialSize=5
